--- a/week06/project.html
+++ b/week06/project.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Images Generator</title>
+    <title>Image Generator</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
+<header>
+    <h1>Image Generator</h1>
+</header>
 <body>
-    
+    <section></section>
 </body>
+<script src="scripts/project.js"></script>
 </html>
